# ssimulacra2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benches.rs
src/: blur.rs  lib.rs
ssimulacra2/: Cargo.toml
ssimulacra2/benches/: benches.rs
ssimulacra2_bin/: Cargo.toml
ssimulacra2_bin/src/: main.rs  video.rs
