[package]
name = "ssimulacra2"
version = "0.5.1"
edition = "2024"
rust-version = "1.89"
description = "Rust implementation of the SSIMULACRA2 metric"
repository = "https://github.com/rust-av/ssimulacra2"
homepage = "https://github.com/rust-av/ssimulacra2"
documentation = "https://docs.rs/ssimulacra2"
exclude = ["test_data"]
license = "BSD-2-Clause"

[dependencies]
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
thiserror = "2.0.9"
yuvxyb = "0.4.1"

[build-dependencies.yuvxyb-math]
version = "0.1"

[dev-dependencies]
criterion = "0.5.0"
image = "0.25.0"
rand = "0.8.5"

[features]
default = ["rayon"]

[[bench]]
name = "benches"
harness = false

[lints]
workspace = true
